--- a/medical_text_analyzer.ipynb
+++ b/medical_text_analyzer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 医療テキスト分析システム\n",
+    "# 数理LLMモデル分析システム\n",
     "\n",
     "このノートブックでは以下の機能を実行できます：\n",
     "\n",
