--- a/medical_data_generator.ipynb
+++ b/medical_data_generator.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 医療テキストデータ生成ツール\n",
     "\n",
-    "このノートブックでは、医療記録のダミーデータを生成します。\n",
+    "このノートブックでは、数理LLMモデルのダミーデータを生成します。\n",
     "- 診断名、検査名、術式などの表記揺れを含む\n",
     "- 時系列に沿った自然な記録の流れを生成\n",
     "- 特記事項に数値データを含むパターンを再現"
