--- a/medical_text_analyzer.ipynb
+++ b/medical_text_analyzer.ipynb
@@ -2146,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
    "source": [
     "def display_patient_details(df, patient_id):\n",
     "    patient_data = df[df['ID'] == patient_id].sort_values('day')\n",
-    "    print(f\"患者ID {patient_id} の経過:\")\n",
+    "    print(f\"モデルID {patient_id} の経過:\")\n",
     "    \n",
     "    for _, row in patient_data.iterrows():\n",
     "        print(f\"\\n日付: {row['day']}\")\n",
@@ -2196,7 +2196,7 @@
     "            if row[col] != 'N/A':\n",
     "                print(f\"{col}: {row[col]}\")\n",
     "\n",
-    "# 最初の患者IDについて詳細を表示\n",
+    "# 最初のモデルIDについて詳細を表示\n",
     "first_patient_id = results_df['ID'].iloc[0]\n",
     "display_patient_details(results_df, first_patient_id)"
    ]
