--- a/medical_data_generator.ipynb
+++ b/medical_data_generator.ipynb
@@ -158,7 +158,7 @@
      "text": [
       "生成されたデータの統計情報:\n",
       "総レコード数: 4\n",
-      "患者数: 1\n",
+      "モデル数: 1\n",
       "期間: 2023-01-01 ～ 2023-03-02\n",
       "5件のダミーデータを../data/sample_data.xlsxに保存しました\n",
       "\n",
@@ -168,7 +168,7 @@
    ],
    "source": [
     "# データ生成のパラメータ設定\n",
-    "num_patients = 1  # 生成する患者数\n",
+    "num_patients = 1  # 生成するモデル数\n",
     "\n",
     "# データの生成\n",
     "df = generator.generate_patient_records(num_patients=num_patients)\n",
@@ -176,7 +176,7 @@
     "# 基本統計情報の表示\n",
     "print(f\"生成されたデータの統計情報:\")\n",
     "print(f\"総レコード数: {len(df)}\")\n",
-    "print(f\"患者数: {df['ID'].nunique()}\")\n",
+    "print(f\"モデル数: {df['ID'].nunique()}\")\n",
     "print(f\"期間: {df['day'].min()} ～ {df['day'].max()}\")\n",
     "\n",
     "# データの保存\n",
@@ -202,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "患者ごとの記録数:\n",
+      "モデルごとの記録数:\n",
       "最小: 3\n",
       "最大: 7\n",
       "平均: 5.0\n",
@@ -215,9 +215,9 @@
     }
    ],
    "source": [
-    "# 患者ごとの記録数の分布\n",
+    "# モデルごとの記録数の分布\n",
     "records_per_patient = df['ID'].value_counts()\n",
-    "print(\"患者ごとの記録数:\")\n",
+    "print(\"モデルごとの記録数:\")\n",
     "print(f\"最小: {records_per_patient.min()}\")\n",
     "print(f\"最大: {records_per_patient.max()}\")\n",
     "print(f\"平均: {records_per_patient.mean():.1f}\")\n",
