--- a/medical_text_analyzer.ipynb
+++ b/medical_text_analyzer.ipynb
@@ -1938,7 +1938,7 @@
    "source": [
     "# 各種分析の実行\n",
     "analysis_templates = [\n",
-    "    \"cancer_diagnosis\",   # がん診断名の抽出\n",
+    "    \"cancer_diagnosis\",   # 回答の抽出\n",
     "    \"cancer_stage\",       # ステージ情報の抽出\n",
     "    \"diagnostic_test\",    # 診断検査の抽出\n",
     "    \"first_treatment\",    # 初回治療情報の抽出\n",
